init hoang shop project